[tool.poetry]
name = "dirsnapshot"
version = "0.3.0"
description = "Report differences between a directory and a previous snapshot of the same directory."
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RhetTbull/dirsnapshot"
repository = "https://github.com/RhetTbull/dirsnapshot"
keywords = ["cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pdoc3 = "^0.10.0"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
mypy = "^0.960"

[tool.poetry.scripts]
dirsnap = "dirsnapshot.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"